--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "ava"
+    "test": "ava",
+    "cov": "nyc ava"
   },
   "ava": {
     "require": "babel-register",
@@ -18,6 +19,7 @@
     "ava": "^0.18.1",
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.22.0"
+    "babel-register": "^6.22.0",
+    "nyc": "^10.1.2"
   }
 }
